# repoinfo

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  commands.rs  main.rs
src/commands/: repo.rs  search.rs
