[package]
name = "repoviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.22.0"
